Categories and Status (#4614)
See discussion: https://github.com/elabftw/elabftw/discussions/4613

In this PR:

* categories AND status for experiments, resources and experiments templates. Status for Resources.
* update cypress to 13.2.0 from 12.17.4
* Status class is renamed to ExperimentsStatus
* ExperimentsStatus, ItemsStatus, and ExperimentsCategories are all a child class of AbstractStatus.
* category/status classes no longer return `category` instead of `title` and `category_id` instead of `id`. They now return the original column name.
* category/status_title/color are present in entityData
* add status filter to display param, because now cat means category only
* create `getIntOrNull()` because status and category are nullable now
* `mainattr_title` corresponds to status_title for experiments and category_title for items
* add a `state` to statuslike
* adjust Populate class to account for novelties
* delete the SearchController, no longer necessary
* create a generic `getDefault()` function to get the default category/status
* fix a bug where setting the default status would not work
* in admin panel, make a tab for categories and one for status
* in show mode, display the category and status in gray
* remove the category in front of resource title in view mode: it is visible just below and takes valuable title place, and complicate things when changing the category, as it needs to be updated too
* change a few things on the search page: the helpers are only helpers to build the query and do not participate in the query string, only the extended query, this lets the Filters submenu handle the filtering on results, and it is always visible on search page

Changes that are unrelated but are still present:

* rework 2fa to fix cancel button behavior
*  add deprecation of apiv1 error message
    doing a request to apiv1 will now error out with status 400, and display
    a message informing the user that apiv1 is deprecated and will

--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -29,7 +29,7 @@ config:
   ldap_username: cn=admin,dc=example,dc=org
   # increase this a bit
   login_tries: 10
-  s3_region: "us-west-2"
+  s3_region: fr-par-42
 
 teams:
   - name: Alpha
