--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -80,6 +80,7 @@ users:
     create_experiments: true
     create_items: true
     create_templates: true
+    api_key: apiKey4Test_tata
 
   - team: Bravo
 
