--- a/tests/apiv2.suite.yml
+++ b/tests/apiv2.suite.yml
@@ -9,7 +9,7 @@ coverage:
       allow_self_signed: true
 modules:
     enabled:
-        - \Helper\Api
+        - \Helper\Apiv2
         - REST:
             url: https://elabtmp/api/v2/
             depends: PhpBrowser
