--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -3,6 +3,9 @@
 # Suite for unit (internal) tests.
 
 class_name: UnitTester
+coverage:
+    include:
+        - src/commands/*
 modules:
     enabled:
         - Asserts
