--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "srcdoc": "phpDocumentor run --cache-folder /tmp -i ./cache -i ./uploads -d src/classes -d src/controllers -d src/exceptions -d src/interfaces -d src/models -d src/services -d src/traits -d web/app/controllers -t _srcdoc --setting=graphs.enabled=true",
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
-    "test:clean": "php vendor/bin/codecpt clean",
+    "test:clean": "php vendor/bin/codecept clean",
     "tinymce": "cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
     "twigcs": "php vendor/bin/twigcs",
     "unit": "tests/run.sh unit",
