--- a/codeception.yml
+++ b/codeception.yml
@@ -2,18 +2,21 @@ coverage:
     enabled: true
     show_uncovered: true
     show_only_summary: true
-    whitelist:
-        include:
-            - src/Auth/*
-            - src/commands/*
-            - src/models/*
-            - src/classes/*
-            - src/Make/*
-            - src/Import/*
-            - src/services/*
-            - src/Storage/*
-            - src/traits/*
-            - src/controllers/*
+    include:
+        - src/Auth/*
+        - src/classes/*
+        - src/commands/*
+        - src/controllers/*
+        - src/enums/*
+        - src/exceptions/*
+        - src/factories/*
+        - src/Import/*
+        - src/Make/*
+        - src/models/*
+        - src/services/*
+        - src/Storage/*
+        - src/traits/*
+        - web/*
 actor: Tester
 paths:
     tests: tests
