remove dev tools from code coverage

--- a/codeception.yml
+++ b/codeception.yml
@@ -17,6 +17,9 @@ coverage:
         - src/Storage/*
         - src/traits/*
         - web/*
+    exclude:
+        - src/commands/PopulateDatabase.php
+        - src/commands/GenI18n4Js.php
 actor: Tester
 paths:
     tests: tests
