--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "3dmol": "2.0.3",
+    "3dmol": "^2.0.5",
     "@deltablot/chemdoodle-web-mini": "^9.2.1",
     "@deltablot/malle": "^2.3.0",
     "@deltablot/tg-oss-ove-umd": "^0.3.2",
