--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-select": "^1.13.18",
     "css-loader": "^6.0.0",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "diff-match-patch": "^1.0.5",
     "dropzone": "^5.8.0",
     "expose-loader": "^4.0.0",
     "i18next": "^23.4.1",
@@ -33,12 +34,13 @@
     "marked": "^8.0.0",
     "mathjax-full": "^3.2.0",
     "mini-css-extract-plugin": "^2.1.0",
-    "peggy": "^3.0.1",
+    "peggy": "^3.0.2",
     "phpeggy": "^2.0.0",
     "popper.js": "1.16.*",
     "prismjs": "^1.25.0",
     "sass": "^1.23.7",
     "stream-browserify": "^3.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "timers-browserify": "^2.0.12",
     "tinymce": "^5.10.0",
     "ts-loader": "^9.1.1",
@@ -61,6 +63,7 @@
     "eslint": "^8.2.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
+    "sass-loader": "^13.3.2",
     "stylelint": "^15.10.1",
     "stylelint-config-sass-guidelines": "^10.0.0",
     "webpack-bundle-analyzer": "^4.1.0"
@@ -77,19 +80,19 @@
     "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile --prod && yarn buildjs:prod && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
-    "buildcss": "sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
+    "buildcss": "exit 0;yarn sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildjs:prod": "yarn build:prod && yarn buildnode",
-    "buildparser": "node ./src/node/grammar/generateParser.js",
+    "buildparser": "yarn node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
     "chemdoodle": "cp node_modules/@deltablot/chemdoodle-web-mini/dist/chemdoodle.min.js web/assets",
     "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map web/assets/ove/*",
     "codespell": "codespell --config src/tools/codespellrc",
-    "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
+    "csslint": "yarn run stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
     "jslint:all": "yarn run jslint && yarn run jslint:cy",
@@ -127,5 +130,6 @@
   "bugs": {
     "url": "https://github.com/elabftw/elabftw/issues"
   },
-  "homepage": "https://www.elabftw.net"
+  "homepage": "https://www.elabftw.net",
+  "packageManager": "yarn@4.0.0"
 }
