--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "3dmol": "^2.0.5",
-    "@deltablot/chemdoodle-web-mini": "^9.2.1",
+    "@deltablot/chemdoodle-web-mini": "^9.5.0",
     "@deltablot/malle": "^2.3.0",
     "@deltablot/tg-oss-ove-umd": "^0.3.2",
     "@fancyapps/fancybox": "3.5.*",
@@ -80,16 +80,15 @@
     "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser",
     "buildcss": "exit 0;yarn sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildjs:prod": "yarn build:prod && yarn buildnode",
     "buildparser": "yarn node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
-    "chemdoodle": "cp node_modules/@deltablot/chemdoodle-web-mini/dist/chemdoodle.min.js web/assets",
     "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map web/assets/ove/*",
     "codespell": "codespell --config src/tools/codespellrc",
     "csslint": "yarn run stylelint src/scss/*.scss",
@@ -101,7 +100,7 @@
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
     "jslint:cy": "eslint --ext .ts tests/cypress",
     "jslint-ci:cy": "eslint --ext .ts --quiet tests/cypress",
-    "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
+    "ove": "exit 0;mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
@@ -116,7 +115,7 @@
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
     "test:clean": "php vendor/bin/codecept clean",
-    "tinymce": "cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
+    "tinymce": "exit 0;cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
     "twigcs": "php vendor/bin/twigcs",
     "unit": "tests/run.sh unit",
     "unit-ci": "php vendor/bin/codecept run unit",
