use teselagen/ove directly

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "3dmol": "^2.0.5",
     "@deltablot/chemdoodle-web-mini": "^9.5.0",
     "@deltablot/malle": "^2.3.0",
-    "@deltablot/tg-oss-ove-umd": "^0.3.2",
     "@fancyapps/fancybox": "3.5.*",
     "@fullcalendar/bootstrap": "^6.1.5",
     "@fullcalendar/core": "^6.1.5",
@@ -18,6 +17,7 @@
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
     "@teselagen/bio-parsers": "^0.3.2",
+    "@teselagen/ove": "^0.3.48",
     "bootstrap": "^4.5.0",
     "bootstrap-markdown-fa5": "2.10.*",
     "bootstrap-select": "^1.13.18",
@@ -39,9 +39,7 @@
     "popper.js": "1.16.*",
     "prismjs": "^1.25.0",
     "sass": "^1.23.7",
-    "stream-browserify": "^3.0.0",
     "terser-webpack-plugin": "^5.3.9",
-    "timers-browserify": "^2.0.12",
     "tinymce": "^5.10.0",
     "ts-loader": "^9.1.1",
     "typescript": "^5.1.6",
@@ -73,23 +71,23 @@
     "api": "tests/run.sh api",
     "apidoc": "apidoc -c apidoc/v1/apidoc.json -o apidoc/v1/html -i src/controllers",
     "apidocv2": "docker run --name swagger --rm -e SWAGGER_JSON=/c/openapi.yaml -v $(pwd)/apidoc/v2/:/c -p 8085:8080 -d swaggerapi/swagger-ui && echo 'APIv2 Doc: http://localhost:8085' && echo 'Run docker stop swagger to remove it.'",
-    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
-    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
+    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg",
+    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg",
     "build": "webpack-cli --progress --config builder.js",
     "build:dev": "webpack-cli --config builder.js",
     "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn tinymce && yarn ove && yarn buildparser",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn tinymce && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn tinymce && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn tinymce && yarn buildparser",
     "buildcss": "exit 0;yarn sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildjs:prod": "yarn build:prod && yarn buildnode",
     "buildparser": "yarn node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
-    "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map web/assets/ove/*",
+    "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map",
     "codespell": "codespell --config src/tools/codespellrc",
     "csslint": "yarn run stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
@@ -100,7 +98,6 @@
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
     "jslint:cy": "eslint --ext .ts tests/cypress",
     "jslint-ci:cy": "eslint --ext .ts --quiet tests/cypress",
-    "ove": "exit 0;mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
