--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "cypress": "^13.2.0",
+    "cypress-html-validate": "^6.0.0",
     "eslint": "^8.2.0",
+    "html-validate": "^8.3.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
     "stylelint": "^15.10.1",
