--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@types/marked": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "cypress": "^13.2.0",
+    "ajv": "^6.12.6",
+    "cypress": "^13.3.0",
     "cypress-html-validate": "^6.0.0",
     "eslint": "^8.2.0",
     "html-validate": "^8.3.0",
