--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@fullcalendar/timegrid": "^6.1.5",
     "@teselagen/bio-parsers": "^0.3.2",
     "@teselagen/ove": "^0.3.48",
+    "@yarnpkg/core": "^4.0.0",
+    "@yarnpkg/fslib": "^3.0.0",
+    "@yarnpkg/libzip": "^3.0.0",
     "bootstrap": "^4.5.0",
     "bootstrap-markdown-fa5": "2.10.*",
     "bootstrap-select": "^1.13.18",
@@ -40,7 +43,7 @@
     "prismjs": "^1.25.0",
     "sass": "^1.23.7",
     "terser-webpack-plugin": "^5.3.9",
-    "tinymce": "^5.10.0",
+    "tinymce": "^6.7.2",
     "ts-loader": "^9.1.1",
     "typescript": "^5.1.6",
     "webpack": "^5.9.0",
@@ -78,16 +81,16 @@
     "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn tinymce && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn tinymce && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn tinymce && yarn buildparser",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn buildparser",
     "buildcss": "exit 0;yarn sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildjs:prod": "yarn build:prod && yarn buildnode",
     "buildparser": "yarn node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
-    "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map",
+    "clean": "rm -rvf web/assets/*.min.css* web/assets/*.bundle.js*",
     "codespell": "codespell --config src/tools/codespellrc",
     "csslint": "yarn run stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
@@ -112,7 +115,6 @@
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
     "test:clean": "php vendor/bin/codecept clean",
-    "tinymce": "exit 0;cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
     "twigcs": "php vendor/bin/twigcs",
     "unit": "tests/run.sh unit",
     "unit-ci": "php vendor/bin/codecept run unit",
