Start major changes for v5 (#4698)
In this PR:

* yarn is now using v4, meaning node_modules folder doesn't exist anymore
* some improvements have been made to how bundling of js and css is done
* tinymce has been updated to v6 (imagetools plugin still WIP)
* scss files now loaded by webpack builder
* OVE now taken directly from upstream
* tinymce autocomplete plugin re-written and fixed to work with v6
* upgrade chemdoodle and change how it is imported/used
* add accordion plugin for tinymce

---------

Co-authored-by: Marcel <65481677+MarcelBolten@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,10 @@ config.php*
 *.min.js
 *.js.map
 *.bundle.js
-node_modules/*
+.pnp.*
 web/test.php
 web/assets/*.LICENSE.txt
 web/assets/*.svg
-web/assets/ove
 src/node/*.LICENSE.txt
 tests/_output/*
 tests/_support/_generated*
@@ -26,10 +25,10 @@ tests/cypress/screenshots
 tests/cypress/videos
 uploads
 /vendor/
-web/app/css/tinymce/fonts/*.woff
 .sass-cache
 src/ts/langs/*.js
 *.gz
 tests/elabftw-user.env
 /todo
 /ideas
+.yarn
