--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "3dmol": "^2.0.5",
-    "@deltablot/chemdoodle-web-mini": "^9.2.1",
+    "@deltablot/chemdoodle-web-mini": "^9.5.0",
     "@deltablot/malle": "^2.3.0",
-    "@deltablot/tg-oss-ove-umd": "^0.3.2",
     "@fancyapps/fancybox": "3.5.*",
     "@fullcalendar/bootstrap": "^6.1.5",
     "@fullcalendar/core": "^6.1.5",
@@ -18,11 +17,16 @@
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
     "@teselagen/bio-parsers": "^0.3.2",
+    "@teselagen/ove": "^0.3.48",
+    "@yarnpkg/core": "^4.0.0",
+    "@yarnpkg/fslib": "^3.0.0",
+    "@yarnpkg/libzip": "^3.0.0",
     "bootstrap": "^4.5.0",
     "bootstrap-markdown-fa5": "2.10.*",
     "bootstrap-select": "^1.13.18",
     "css-loader": "^6.0.0",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "diff-match-patch": "^1.0.5",
     "dropzone": "^5.8.0",
     "expose-loader": "^4.0.0",
     "i18next": "^23.4.1",
@@ -33,14 +37,13 @@
     "marked": "^8.0.0",
     "mathjax-full": "^3.2.0",
     "mini-css-extract-plugin": "^2.1.0",
-    "peggy": "^3.0.1",
+    "peggy": "^3.0.2",
     "phpeggy": "^2.0.0",
     "popper.js": "1.16.*",
     "prismjs": "^1.25.0",
     "sass": "^1.23.7",
-    "stream-browserify": "^3.0.0",
-    "timers-browserify": "^2.0.12",
-    "tinymce": "^5.10.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "tinymce": "^6.7.2",
     "ts-loader": "^9.1.1",
     "typescript": "^5.1.6",
     "webpack": "^5.9.0",
@@ -61,35 +64,34 @@
     "eslint": "^8.2.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
+    "sass-loader": "^13.3.2",
     "stylelint": "^15.10.1",
     "stylelint-config-sass-guidelines": "^10.0.0",
-    "webpack-bundle-analyzer": "^4.1.0"
+    "webpack-bundle-analyzer": "^4.9.1"
   },
   "scripts": {
-    "analyzejs": "webpack-bundle-analyzer stats.json web/app/js",
+    "analyzejs": "yarn run buildprofile && webpack-bundle-analyzer stats.json web/assets -m static -O",
     "api": "tests/run.sh api",
-    "apidoc": "apidoc -c apidoc/v1/apidoc.json -o apidoc/v1/html -i src/controllers",
     "apidocv2": "docker run --name swagger --rm -e SWAGGER_JSON=/c/openapi.yaml -v $(pwd)/apidoc/v2/:/c -p 8085:8080 -d swaggerapi/swagger-ui && echo 'APIv2 Doc: http://localhost:8085' && echo 'Run docker stop swagger to remove it.'",
-    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
-    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
+    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg",
+    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg",
     "build": "webpack-cli --progress --config builder.js",
     "build:dev": "webpack-cli --config builder.js",
     "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile --prod && yarn buildjs:prod && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
-    "buildcss": "sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs && yarn buildcss && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn buildjs:prod && yarn buildcss && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --immutable && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn buildparser",
+    "buildcss": "exit 0;yarn sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildjs:prod": "yarn build:prod && yarn buildnode",
-    "buildparser": "node ./src/node/grammar/generateParser.js",
+    "buildparser": "yarn node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
-    "chemdoodle": "cp node_modules/@deltablot/chemdoodle-web-mini/dist/chemdoodle.min.js web/assets",
-    "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map web/assets/ove/*",
+    "clean": "rm -rvf web/assets/*.min.css* web/assets/*.bundle.js*",
     "codespell": "codespell --config src/tools/codespellrc",
-    "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
+    "csslint": "yarn run stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
     "jslint:all": "yarn run jslint && yarn run jslint:cy",
@@ -98,7 +100,6 @@
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
     "jslint:cy": "eslint --ext .ts tests/cypress",
     "jslint-ci:cy": "eslint --ext .ts --quiet tests/cypress",
-    "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
@@ -113,7 +114,6 @@
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
     "test:clean": "php vendor/bin/codecept clean",
-    "tinymce": "cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
     "twigcs": "php vendor/bin/twigcs",
     "unit": "tests/run.sh unit",
     "unit-ci": "php vendor/bin/codecept run unit",
@@ -127,5 +127,6 @@
   "bugs": {
     "url": "https://github.com/elabftw/elabftw/issues"
   },
-  "homepage": "https://www.elabftw.net"
+  "homepage": "https://www.elabftw.net",
+  "packageManager": "yarn@4.0.0"
 }
