add audit_logs table

--- a/codeception.yml
+++ b/codeception.yml
@@ -3,6 +3,7 @@ coverage:
     show_uncovered: true
     show_only_summary: true
     include:
+        - src/AuditEvent/*
         - src/Auth/*
         - src/classes/*
         - src/commands/*
