Add html validation to cypress tests (#4688)
* update entity.cy.ts

* update cypress Dockerfile

* add html-validate, and cypress-html-validate

* use htmlvalidate() in cypress tests

* use single quotes in html

* add more team.php tests

* add search user test on (sys)admin page

* no useless attribute whitespaces

* suppress html-validate errors from 3rd party tools

* make sortable tables accessible
add aria-sort
convert span icons to buttons, add aria-label
add title and make them i18n

* add type=button and more aria-labels

* add type=text to input

* use placeholder to avoid empty heading

* harmonize template select layout

* remove useless span elements

* do not use button as child of link

* nicer highlighting when navigating by keyboard

* add a label to userExportFormat on profile page

* binary-setting template: avoid id duplication, replace label wrapper with span

* fix id saml_base_url -> saml_baseurl

* no need to use different id hidden_ldap_password -> ldap_password

* move todo statement to twig comment

* label -> span

* add missing aria-labels for form elements

* add aria-label to start rating

* no duplicate ids: newFieldForm

* convert links/span to button to make page more accessibly

* upgrade elab-cypress container

* upgrade cypress, cypress-html-validate, html-validate, fix ajv@^6.12.6 for eslint

* install as root

* add back typescript for node user

* install all deps as node user

* config cypress to use html-validate

* use same i18n handle for both cases

* add comment for placeholder

* fix html violations

* update yarn.lock

* meh: phpcs comment indentation

* composer upgrade

* remove explicit ajv dependency

* fix double space

* update cypress, html-validate, and cypress-html-validate

* fix switches, add more labels

* lint yarn plugin tinymce

* make tabbed-menu accessible by keyboard

* nicer toggle scope User/Team switch in t

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "tinymce": "^6.8.1",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
@@ -61,7 +61,9 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "cypress": "^13.6.0",
+    "cypress-html-validate": "^6.1.0",
     "eslint": "^8.55.0",
+    "html-validate": "^8.7.3",
     "postcss": "^8.4.31",
     "postcss-scss": "^4.0.9",
     "sass-loader": "^13.3.2",
