improve functions signatures

--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -21,7 +21,7 @@ config:
   # set debug mode ON
   debug: 1
   # set the mail_from config
-  mailfrom: elabftw@example.com
+  mail_from: elabftw@example.com
   ldap_base_dn: dc=example,dc=org
   ldap_host: ldap
   # this is the default password of osixia/openldap docker container
