--- a/composer.json
+++ b/composer.json
@@ -58,9 +58,9 @@
     "codeception/module-rest": "^3.2.0",
     "codeception/module-phpbrowser": "^3.0",
     "codeception/c3": "^2.9",
-    "rector/rector": "^0.18.0",
+    "friendsoftwig/twigcs": "^6.2",
     "phpstan/phpstan": "^1.10",
-    "friendsoftwig/twigcs": "^6.2"
+    "vimeo/psalm": "5.18.0"
   },
   "autoload": {
     "psr-4": {
@@ -139,6 +139,10 @@
     ]
   },
   "license": "AGPL-3.0-or-later",
+  "scripts": {
+    "psalm": "./vendor/bin/psalm --no-progress -c=src/tools/psalm.xml",
+    "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon"
+  },
   "config": {
     "allow-plugins": {
       "pyrech/composer-changelogs": true,
