Account expiration notifications (#4886)
* add notifications:send-expiration command to notify users and their admins of expiration date
* cleanup: remove phan and duplicate phpstan psalm stuff in elabtmp

--- a/package.json
+++ b/package.json
@@ -102,7 +102,6 @@
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
     "jslint:cy": "eslint --ext .ts tests/cypress",
     "jslint-ci:cy": "eslint --ext .ts --quiet tests/cypress",
-    "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
@@ -113,7 +112,7 @@
     "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
     "rector-dry": "./vendor/bin/rector process src --config src/tools/rector.php --dry-run",
     "srcdoc": "phpDocumentor run --cache-folder /tmp -i ./cache -i ./uploads -d src/classes -d src/controllers -d src/exceptions -d src/interfaces -d src/models -d src/services -d src/traits -d web/app/controllers -t _srcdoc --setting=graphs.enabled=true",
-    "static": "yarn psalm && yarn phpstan",
+    "static": "composer run-script psalm && composer run-script phpstan",
     "test": "tests/run.sh",
     "test:clean": "php vendor/bin/codecept clean",
     "twigcs": "php vendor/bin/twigcs",
