add password related configuration options
* configurable password minimum length
* configurable password complexity
* new passwords min length is now 12 but existing accounts will not need
  to reset it
* configurable password expiration time

--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -42,7 +42,7 @@ teams:
 # unless a password is set here
 users:
   - email: toto@yopmail.com
-    password: totototo
+    password: totototototo
     firstname: Toto
     lastname: Le sysadmin
     team: Alpha
