--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "jblond/twig-trans": "^1.0",
     "twig/intl-extra": "^3.3",
     "symfony/yaml": "^6.2",
-    "fakerphp/faker": "^1.21"
+    "fakerphp/faker": "^1.21",
+    "paragonie/constant_time_encoding": "^2.6"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
