remove non-existing dir mentions in composer.json

--- a/composer.json
+++ b/composer.json
@@ -106,9 +106,7 @@
         "src/models/notifications"
       ],
       "Elabftw\\Services\\": [
-        "src/services",
-        "src/services/import",
-        "src/services/make"
+        "src/services"
       ],
       "Elabftw\\Storage\\": [
         "src/Storage"
