--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,6 @@
     "symfony/console": "^6.0",
     "symfony/process": "^6.0",
     "league/commonmark": "^2.0",
-    "symfony/filesystem": "^6.0",
     "symfony/mime": "^6.0",
     "robthree/twofactorauth": "^2.0.0",
     "directorytree/ldaprecord": "^3.0.1",
@@ -48,7 +47,12 @@
     "symfony/yaml": "^6.2",
     "fakerphp/faker": "^1.21",
     "paragonie/constant_time_encoding": "^2.6",
-    "stevebauman/hypertext": "^1.0"
+    "stevebauman/hypertext": "^1.0",
+    "league/flysystem-local": "^3.25",
+    "guzzlehttp/psr7": "^2.6",
+    "psr/http-message": "^2.0",
+    "psr/log": "^3.0",
+    "setasign/fpdi": "^2.6"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
