--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "3dmol": "^2.0.6",
     "@deltablot/chemdoodle-web-mini": "^9.5.1",
-    "@deltablot/dropzone": "7.0.0-alpha2",
+    "@deltablot/dropzone": "^7.1.2",
     "@deltablot/malle": "^2.5.2",
     "@fancyapps/fancybox": "^3.5.7",
     "@fullcalendar/bootstrap": "^6.1.10",
