--- a/package.json
+++ b/package.json
@@ -106,8 +106,8 @@
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
     "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
     "pre-commit": "yarn phpcs-dry && yarn static && yarn csslint && yarn jslint:all && yarn twigcs",
-    "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
-    "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
+    "psalm": "./vendor/bin/psalm --no-progress -c=src/tools/psalm.xml",
+    "psalmall": "./vendor/bin/psalm -c=src/tools/psalm.xml --show-info=true",
     "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
     "rector-dry": "./vendor/bin/rector process src --config src/tools/rector.php --dry-run",
     "srcdoc": "phpDocumentor run --cache-folder /tmp -i ./cache -i ./uploads -d src/classes -d src/controllers -d src/exceptions -d src/interfaces -d src/models -d src/services -d src/traits -d web/app/controllers -t _srcdoc --setting=graphs.enabled=true",
