use composer run-script for psalm and phpstan in package.json
superseedes #5076

--- a/package.json
+++ b/package.json
@@ -104,12 +104,9 @@
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
-    "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
+    "phpstan": "composer run-script phpstan",
     "pre-commit": "yarn phpcs-dry && yarn static && yarn csslint && yarn jslint:all && yarn twigcs",
-    "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
-    "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
-    "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
-    "rector-dry": "./vendor/bin/rector process src --config src/tools/rector.php --dry-run",
+    "psalm": "composer run-script psalm",
     "srcdoc": "phpDocumentor run --cache-folder /tmp -i ./cache -i ./uploads -d src/classes -d src/controllers -d src/exceptions -d src/interfaces -d src/models -d src/services -d src/traits -d web/app/controllers -t _srcdoc --setting=graphs.enabled=true",
     "static": "composer run-script psalm && composer run-script phpstan",
     "test": "tests/run.sh",
