--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "diff-match-patch": "^1.0.5",
     "expose-loader": "^4.1.0",
     "i18next": "^23.12.2",
+    "immutable": "^4.3.7",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.14.0",
     "jsoneditor": "^10.1.0",
+    "ketcher-core": "^2.21.0",
+    "ketcher-react": "^2.21.0",
+    "ketcher-standalone": "^2.21.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "marked": "^14.0.0",
@@ -41,12 +45,15 @@
     "phpeggy": "^2.0.1",
     "popper.js": "^1.16.1",
     "prismjs": "^1.29.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.77.8",
     "terser-webpack-plugin": "^5.3.10",
     "tinymce": "^6.8.4",
     "tom-select": "^2.3.1",
     "ts-loader": "^9.5.1",
     "typescript": "5.2.2",
+    "util": "^0.12.5",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
@@ -55,6 +62,9 @@
     "micromatch": "^4.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@types/bootstrap": "^5.2.10",
     "@types/dropzone": "^5.7.8",
     "@types/fancybox": "^3.5.7",
@@ -64,6 +74,7 @@
     "@types/marked": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "babel-loader": "^9.1.3",
     "cypress": "^13.12.0",
     "cypress-html-validate": "^6.1.0",
     "eslint": "^8.57.0",
