--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "phpeggy": "^2.0.1",
     "popper.js": "^1.16.1",
     "prismjs": "^1.29.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.77.8",
